--- a/plugin.xml
+++ b/plugin.xml
@@ -2,8 +2,8 @@
 <plugin
   xmlns="http://apache.org/cordova/ns/plugins/1.0"
   xmlns:android="http://schemas.android.com/apk/res/android"
-  id="call-number"
-  version="1.0.4">
+  id="CordovaCallNumberPlugin"
+  version="1.0.5">
 
   <description>Call Number from Cordova Application</description>
 
@@ -11,8 +11,8 @@
   <author>Rohith Varanasi, Nishil Shah</author>
   
   
-  <repo>https://github.com/Rohfosho/CordovaCallNumberPlugin.git</repo>
-  <issue>https://github.com/Rohfosho/CordovaCallNumberPlugin/issues</issue>
+  <repo>https://github.com/dpa99c/CordovaCallNumberPlugin.git</repo>
+  <issue>https://github.com/dpa99c/CordovaCallNumberPlugin/issues</issue>
 
   <license>Apache 2.0</license>
   <keywords>cordova,call,dialer,phonegap</keywords>
